# DataConverter

./: .DataConverter.wavedev  .cproject  .gitignore  .gitlab-ci.yml  .library  .md5sums  .project  .pydevproject  COPYRIGHT  DataConverter.prf.xml  DataConverter.scd.xml  DataConverter.spd.xml  DataConverter.spec  HEADER  README.md  build.sh  rh.DataConverter.spec
DataConverter/: DataConverter.cpp  DataConverter_base.cpp  DataConverter_base.h  Makefile.am  configure.ac  struct_props.h
cpp/: .md5sums  DataConverter.cpp  DataConverter.h  DataConverter_base.cpp  DataConverter_base.h  DataTypes.h  Filter.h  InputWorkOutput.h  Makefile.am  Makefile.am.ide  R2C.h  build.sh  configure.ac  dataTypeTransformOpt.cpp  dataTypeTransformOpt.h  main.cpp  mathOptimizations.c  mathOptimizations.h  reconf  struct_props.h
docs/: svd_DataConverter.txt
tests/: test_DataConverter.py
